# enigma2

./: .gitignore  .travis.yml  BoxBrandingTest.py  Makefile.am  Navigation.py  PEP8.sh  README  README.md  RecordTimer.py  ServiceReference.py  a.patch  build.sh  configure.ac  e2reactor.py  enigma2.bb  hu.po  keyids.py  keymapparser.py  mytest.py  setup.cfg  skin.py  skin_display.xml  timer.py
data/: Makefile.am  convert-iso-639-3.py  encoding.conf  groupedservices  imagefeeds.xml  iso-639-3.tab  keymap.xml  keytranslation.xml  menu.xml  radio.mvi  setup.xml  skin.xml  skin_default.xml  skin_display_dm800se.xml  skin_display_dm920.xml  skin_display_e4hd.xml  skin_display_et8500.xml  skin_display_gbquad4k.xml  skin_display_gbue4k.xml  skin_display_osmio4kplus.xml  skin_display_vuduo2.xml  skin_display_vusolo4k.xml  skin_display_vuultimo4k.xml  skin_text_7segment.xml  skin_text_formuler1.xml  startwizard.xml  timezone.xml  unicable.xml
data/countries/: Makefile.am
data/display/: Makefile.am  skin_display_default.xml  skin_display_dm8000.xml  skin_display_dm800se.xml  skin_display_dm900.xml  skin_display_dm920.xml  skin_display_e4hd.xml  skin_display_et8500.xml  skin_display_gbquad4k.xml  skin_display_gbue4k.xml  skin_display_hd2400.xml  skin_display_osmio4kplus.xml  skin_display_vuduo2.xml  skin_display_vuduo4k.xml  skin_display_vusolo4k.xml  skin_display_vuultimo4k.xml  skin_display_vuuno4k.xml  skin_display_vuuno4kse.xml  skin_text_7segment.xml  skin_text_default.xml  skin_text_formuler1.xml  skin_text_gbtrio4k.xml  skin_text_h7.xml  skin_text_osninopro.xml  skin_text_pulse4k.xml  skin_text_sf8008.xml
data/fonts/: Makefile.am
data/hw_info/: hw_info.cfg
data/rc_models/: Makefile.am  amiko.xml  amiko1.xml  dual.xml  e4hd.xml  edision1.xml  edision2.xml  edision3.xml  edision4.xml  et4x00.xml  et7000mini.xml  gb7252.xml  h9.xml  hd-gen.xml  hd60.xml  hd66se.xml  i55.xml  lunix4k.xml  miraclebox.xml  miraclebox2.xml  multibox.xml  octagon.xml  octagon3.xml  osmini.xml  pulse.xml  qviart.xml  rc_models.cfg  revo4k.xml  sh1.xml  spycat.xml  uclan.xml  uclan3.xml  viperslim.xml  vs1x00.xml  vu2.xml  vuuno4kse.xml  wetekplay.xml  xpeedlx.xml  xsarius.xml  zgemma.xml  (+1 more)
data/skin_1080/: Makefile.am
data/skin_1080/border/: Makefile.am
data/skin_1080/buttons/: Makefile.am
data/skin_1080/dvr/: Makefile.am
data/skin_1080/epg/: Makefile.am
data/skin_1080/extensions/: Makefile.am
data/skin_1080/icons/: Makefile.am
data/skin_1080/infobar/: Makefile.am
data/skin_1080/skin_default/: Makefile.am
data/skin_1080/skin_default/buttons/: Makefile.am
data/skin_1080/skin_default/icons/: Makefile.am
data/skin_1080/window/: Makefile.am
data/skin_default/: Makefile.am  skin.xml
data/skin_default/LCDIcons/: Makefile.am
data/skin_default/buttons/: Makefile.am
data/skin_default/epg/: Makefile.am
data/skin_default/icons/: Makefile.am
data/skin_fallback_1080/: Makefile.am
data/skin_fallback_1080/buttons/: Makefile.am
data/skin_fallback_1080/icons/: Makefile.am
doc/: AUTOMATICBUTTONS  ENIGMAINFOVALUES  MENU  SETUP  SETUPGUIDE  TRANSLATIONS  VIRTUALKEYBOARD
include/: Makefile.am  enforceutf8.h  nanosvg.h  nanosvgrast.h
lib/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/AnimationSetup/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/AnimationSetup/meta/: Makefile.am  plugin_animationsetup.xml
lib/python/Plugins/SystemPlugins/CableScan/: plugin.py
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/meta/: plugin_commoninterfaceassignment.xml
lib/python/Plugins/SystemPlugins/DefaultServicesScanner/: plugin.py
lib/python/Plugins/SystemPlugins/DiseqcTester/: plugin.py
lib/python/Plugins/SystemPlugins/FastChannelChange/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/: plugin.py
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml  plugin.py
lib/python/Plugins/SystemPlugins/OSD3DSetup/: plugin.py
lib/python/Plugins/SystemPlugins/OSDPositionSetup/: Makefile.am  overscanwizard.py  plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: Makefile.am  log.py  plugin.py  rotor_calc.py  ui.py
lib/python/Plugins/SystemPlugins/SatelliteEquipmentControl/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SkinSelector/: plugin.py
lib/python/Plugins/SystemPlugins/SkinSelector/meta/: plugin_skinselector.xml
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  ImageWizard.py  Makefile.am  SoftwareTools.py  imagewizard.xml  plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/meta/: plugin_softwaremanager.xml
lib/python/Plugins/SystemPlugins/TempFanControl/: plugin.py
lib/python/Plugins/SystemPlugins/TempFanControl/meta/: plugin_tempfancontrol.xml
lib/python/Plugins/SystemPlugins/VideoClippingSetup/: plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/meta/: plugin_videoenhancement.xml
lib/python/Plugins/SystemPlugins/VideoTune/: Makefile.am  VideoFinetune.py  plugin.py  testbeeld-4k.mvi
lib/python/Plugins/SystemPlugins/VideoTune/meta/: plugin_videotune.xml
lib/python/Plugins/SystemPlugins/Videomode/: Makefile.am  VideoHardware.py  VideoWizard.py  plugin.py  videowizard.xml
lib/python/Plugins/SystemPlugins/WirelessLan/: Wlan.py  plugin.py
m4/: ax_python_devel.m4  depout.m4
main/: Makefile.am  bsod.cpp  enigma-gui.cpp  enigma-playlist.cpp  enigma.cpp
po/: Makefile.am  MyPOupdate.sh  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  enigma2.pot  es.po  et.po  fa.po  fi.po  fr.po  fy.po  gl.po  he.po  hk.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  mk.po  mk_MK.po  nb.po  nl.po  nn.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+14 more)
tests/: enigma.py  events.py  (+3 more)
(+593 files in other folders)
