SUBDIRS = menu icons buttons spinner LCDIcons

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = \
	arrowdown.png \
	arrowup.png \
	bar_ber.png \
	bar_snr.png \
	b_bl.png \
	b_b.png \
	b_br.png \
	b_l.png \
	border_epg.png \
	border_eventinfo.png \
	border_info.png \
	border_menu_300.png \
	border_menu_350.png \
	border_menu.png \
	border_multiepg.png \
	bottombar.png \
	b_r.png \
	b_tl.png \
	b_t.png \
	b_tr.png \
	celserviceeventprogressbar.png \
	div-h.png \
	div-v.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	expandable.png \
	expandable-plugins.png \
	expanded.png \
	expanded-plugins.png \
	info-bg_mp.png \
	info-bg.png \
	mediaplayer_bg.png \
	mute.png \
	nim_active.png \
	no_coverArt.png \
	overscan1280x720.png \
	overscan1920x1080.png \
	picon_default.png \
	position_arrow.png \
	position_pointer.png \
	progress_bg.png \
	progress_big.png \
	progress_medium.png \
	progress_small.png \
	rcold.png \
	rc.png \
	rc0.png \
	rc1.png \
	rc2.png \
	screensaverpicture.png \
	screws_mp.png \
	screws.png \
	sleeptimer.png \
	testscreen.png \
	timeline-now.png \
	timeline.png \
	unhandled-key.png \
	verticalline.png \
	verticalline-plugins.png \
	vkey_backspace.png \
	vkey_bg.png \
	vkey_bg_l.png \
	vkey_bg_m.png \
	vkey_bg_r.png \
	vkey_blue_l.png \
	vkey_blue_m.png \
	vkey_blue_r.png \
	vkey_clear.png \
	vkey_delete.png \
	vkey_enter.png \
	vkey_exit.png \
	vkey_first.png \
	vkey_green_l.png \
	vkey_green_m.png \
	vkey_green_r.png \
	vkey_icon.png \
	vkey_last.png \
	vkey_left.png \
	vkey_locale.png \
	vkey_red_l.png \
	vkey_red_m.png \
	vkey_red_r.png \
	vkey_right.png \
	vkey_sel_l.png \
	vkey_sel_m.png \
	vkey_sel_r.png \
	vkey_shift.png \
	vkey_shift0.png \
	vkey_shift1.png \
	vkey_shift2.png \
	vkey_shift3.png \
	vkey_space_alt.png \
	vkey_space.png \
	vkey_text.png \
	vkey_yellow_l.png \
	vkey_yellow_m.png \
	vkey_yellow_r.png \
	volume.png \
	wizard.png
