installdir = $(pkgdatadir)/skin_1080/icons

dist_install_DATA = \
	ask.png \
	az.png \
	default.png \
	dish.png \
	faz.png \
	fza.png \
	icon_update.png \
	icon_update_off.png \
	loop.png \
	movielist.png \
	newtop.png \
	oldtop.png \
	pause.png \
	playlist.png \
	playlistquit.png \
	quit.png \
	rep.png \
	shuffle.png \
	za.png
