installdir = $(pkgdatadir)/skin_1080/infobar

dist_install_DATA = \
	bar_big.png \
	bl80.png \
	hd.png \
	ico_crypt_on.png \
	ico_dolby_on.png \
	ico_format_hd.png \
	ico_format_16_9.png \
	ico_format_4k.png \
	ico_format_4_3.png \
	ico_hbbtv_on.png \
	ico_pdc.png \
	ico_sub_on.png \
	ico_txt_on.png \
	pbargmepg.png \
	pbar_grey.png \
	pbar.png \
	vol_box.png \
	volumeslider.png
