installdir = $(pkgdatadir)/skin_1080/skin_default

dist_install_DATA = \
	expandable-plugins.png \
	expandable.png \
	expanded-plugins.png \
	expanded.png \
	position_arrow.png \
	progress_bg.png \
	progress_big.png \
	progress_medium.png \
	progress_small.png \
	verticalline-plugins.png \
	verticalline.png
