installdir = $(pkgdatadir)/skin_1080/window

dist_install_DATA = \
	bottom_edge.png \
	bottom_left_corner.png \
	bottom_right_corner.png \
	left_edge.png \
	progress.png \
	right_edge.png \
	separator.png \
	slider100.png \
	sprogress.png \
	timeline-now.png \
	timeline.png \
	top_edge.png \
	top_left_corner.png \
	top_right_corner.png
