installdir = $(pkgdatadir)/skin_default/buttons

dist_install_DATA = \
	blue_pressed.png \
	button_blue.png \
	button_blue_off.png \
	button_green.png \
	button_green_off.png \
	button_red.png \
	button_red_off.png \
	button_yellow.png \
	button_yellow_off.png \
	green-big.png \
	grey.png \
	key_0.png \
	key_1.png \
	key_2.png \
	key_3.png \
	key_4.png \
	key_5.png \
	key_6.png \
	key_7.png \
	key_8.png \
	key_9.png \
	key_audio.png \
	key_blue.png \
	key_channel.png \
	key_exit.png \
	key_green.png \
	key_help.png \
	key_info.png \
	key_left.png \
	key_menu.png \
	key_next.png \
	key_ok.png \
	key_prev.png \
	key_prevnext.png \
	key_red.png \
	key_right.png \
	key_text.png \
	key_tv.png \
	key_yellow.png \
	left.png \
	play.png \
	rec.png \
	red-big.png \
	repeat-off.png \
	repeat-on.png \
	right.png \
	sel.png \
	sel2.png \
	text.png \
	vkey_icon.png \
	blue.svg \
	green.svg \
	red.svg \
	vkey_backspace.svg \
	vkey_bg_l.svg \
	vkey_bg_m.svg \
	vkey_bg_r.svg \
	vkey_blue_l.svg \
	vkey_blue_m.svg \
	vkey_blue_r.svg \
	vkey_clear.svg \
	vkey_delete.svg \
	vkey_enter.svg \
	vkey_exit.svg \
	vkey_first.svg \
	vkey_green_l.svg \
	vkey_green_m.svg \
	vkey_green_r.svg \
	vkey_last.svg \
	vkey_left.svg \
	vkey_locale.svg \
	vkey_red_l.svg \
	vkey_red_m.svg \
	vkey_red_r.svg \
	vkey_right.svg \
	vkey_sel_l.svg \
	vkey_sel_m.svg \
	vkey_sel_r.svg \
	vkey_shift.svg \
	vkey_shift0.svg \
	vkey_shift1.svg \
	vkey_shift2.svg \
	vkey_shift3.svg \
	vkey_space.svg \
	vkey_space_alt.svg \
	vkey_text.svg \
	vkey_yellow_l.svg \
	vkey_yellow_m.svg \
	vkey_yellow_r.svg \
	yellow.svg
