installdir = $(pkgdatadir)/skin_fallback_1080/buttons

dist_install_DATA = \
	blue.png \
	green.png \
	red.png \
	vkey_backspace.png \
	vkey_bg_l.png \
	vkey_bg_m.png \
	vkey_bg_r.png \
	vkey_blue_l.png \
	vkey_blue_m.png \
	vkey_blue_r.png \
	vkey_clear.png \
	vkey_delete.png \
	vkey_enter.png \
	vkey_exit.png \
	vkey_first.png \
	vkey_green_l.png \
	vkey_green_m.png \
	vkey_green_r.png \
	vkey_last.png \
	vkey_left.png \
	vkey_locale.png \
	vkey_red_l.png \
	vkey_red_m.png \
	vkey_red_r.png \
	vkey_right.png \
	vkey_sel_l.png \
	vkey_sel_m.png \
	vkey_sel_r.png \
	vkey_shift.png \
	vkey_shift0.png \
	vkey_shift1.png \
	vkey_shift2.png \
	vkey_shift3.png \
	vkey_space_alt.png \
	vkey_space.png \
	vkey_text.png \
	vkey_yellow_l.png \
	vkey_yellow_m.png \
	vkey_yellow_r.png \
	yellow.png
