installdir = $(pkgdatadir)/skin_1080/skin_default/buttons

dist_install_DATA = \
	blue.png \
	green.png \
	key_audio.png \
	key_blue.png \
	key_exit.png \
	key_f1.png \
	key_f2.png \
	key_f3.png \
	key_green.png \
	key_help.png \
	key_channel.png \
	key_info.png \
	key_left.png \
	key_menu.png \
	key_next.png \
	key_ok.png \
	key_prevnext.png \
	key_prev.png \
	key_radio.png \
	key_red.png \
	key_right.png \
	key_text.png \
	key_tv.png \
	key_video.png \
	key_yellow.png \
	key_0.png \
	key_1.png \
	key_2.png \
	key_3.png \
	key_4.png \
	key_5.png \
	key_6.png \
	key_7.png \
	key_8.png \
	key_9.png \
	red.png \
	yellow.png
