installdir = $(pkgdatadir)/skin_1080/skin_default/icons

dist_install_DATA = \
	bullet.png \
	dish.png \
	epgclock_add.png \
	epgclock.png \
	epgclock_post.png \
	epgclock_pre.png \
	epgclock_prepost.png \
	folder.png \
	ico_dvb_c-fs8.png \
	ico_dvb_s-fs8.png \
	ico_dvb_t-fs8.png \
	ico_mp_forward.png \
	ico_mp_pause.png \
	ico_mp_play.png \
	ico_mp_rewind.png \
	ico_mp_stop.png \
	icon_crypt.png \
	ico_stream-fs8.png \
	input_error.png \
	input_info.png \
	input_question.png \
	lock_error.png \
	lock_off.png \
	lock_on.png \
	lock.png \
	mark_select.png \
	menu_off.png \
	menu_on.png \
	movie_play.png \
	movie_play_rec.png \
	part_new.png \
	part_unwatched.png \
	part_0_4.png \
	part_1_4.png \
	part_2_4.png \
	part_3_4.png \
	part_4_4.png \
	pic_frame.png \
	pipclock_add.png \
	pipclock.png \
	pipclock_post.png \
	pipclock_pre.png \
	pipclock_prepost.png \
	plugin.png \
	record.png \
	remote_epgclock_add.png \
	remote_epgclock.png \
	remote_epgclock_post.png \
	remote_epgclock_pre.png \
	remote_epgclock_prepost.png \
	remote_repepgclock_add.png \
	remote_repepgclock.png \
	remote_repepgclock_post.png \
	remote_repepgclock_pre.png \
	remote_repepgclock_prepost.png \
	remote_repzapclock_add.png \
	remote_repzapclock.png \
	remote_repzapclock_post.png \
	remote_repzapclock_pre.png \
	remote_repzapclock_prepost.png \
	remote_zapclock_add.png \
	remote_zapclock.png \
	remote_zapclock_post.png \
	remote_zapclock_pre.png \
	remote_zapclock_prepost.png \
	repepgclock_add.png \
	repepgclock.png \
	repepgclock_post.png \
	repepgclock_pre.png \
	repepgclock_prepost.png \
	repzapclock_add.png \
	repzapclock.png \
	repzapclock_post.png \
	repzapclock_pre.png \
	repzapclock_prepost.png \
	repzaprecclock_add.png \
	repzaprecclock.png \
	repzaprecclock_post.png \
	repzaprecclock_pre.png \
	repzaprecclock_prepost.png \
	scan-c.png \
	scan-s.png \
	scan-t.png \
	timer_autotimer.png \
	timer_done.png \
	timer_off.png \
	timer_pip.png \
	timer_prep.png \
	timer_rec.png \
	timer_rep.png \
	timer_wait.png \
	timer_zap.png \
	trashcan.png \
	zapclock_add.png \
	zapclock.png \
	zapclock_post.png \
	zapclock_pre.png \
	zapclock_prepost.png \
	zaprecclock_add.png \
	zaprecclock.png \
	zaprecclock_post.png \
	zaprecclock_pre.png \
	zaprecclock_prepost.png
